syntax = "proto3";

package project_origin.register.v1;

message FederatedStreamId {
    string Registry = 1;
    Uuid StreamId = 2;
}

message Uuid {
    string Value = 1;
}
