syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "primitives.proto";

package ProjectOrigin.Wallet.V1;

service WalletService {
    rpc CreateWalletSection(CreateWalletSectionRequest) returns (WalletSectionReference);
    rpc ReceiveSlice(ReceiveRequest) returns (ReceiveResponse);
    rpc QueryGranularCertificates(QueryRequest) returns (QueryResponse);
}

message CreateWalletSectionRequest {} // not yet sure

message WalletSectionReference {
    int32 Version = 1; // The version of the Wallet protobuf API.
    string Endpoint = 2; // The url endpoint of the gRPC endpoint at which the wallet is hosted.
    bytes SectionPublicKey = 3; // The public key used to generate sub-public-keys for each slice.
}

message ReceiveRequest {
    bytes WalletSectionPublicKey = 1;
    uint32 WalletSectionPosition = 2;
    ProjectOrigin.Register.V1.FederatedStreamId CertificateId = 3;
    uint32 Quantity = 4;
    bytes RandomR = 5;
}

message ReceiveResponse {} // not yet sure what to return

message QueryRequest {

}

message QueryResponse {

}
